--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
         <p><span style="color: blueviolet;">Discord Username Btw: hi_firsty</span></p>
     </div>
     <script src="scripts/mainscript.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
