--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="Main">
         <h1>About me</h1>
-        <p>Hello, My name is Firsty!</p>
-        <p>I am a frontend developer and a programmer!</p>
+        <p>Hello, my name is Firsty!</p>
+        <p>I am a frontend developer, programmer, and a chess player!</p>
         <p>Also, I have my profile links too! It's down here!</p>
         <br>
         <br>
@@ -22,6 +22,12 @@
         <br>
         <br>
         <button class="Button" id="ToTiktok" onclick="ChangeToTiktok()" onpointerenter='PointerEnter("ToTiktok")' onpointerleave='PointerLeave("ToTiktok")'>Tiktok</button>
+        <br>
+        <br>
+        <button class="Button" id="ToChess" onclick="ChangeToChess()" onpointerenter='PointerEnter("ToChess")' onpointerleave='PointerLeave("ToChess")'>Chess.com</button>
+        <br>
+        <br>
+        <abbr>--</abbr>
         <br>
         <br>
         <button class="Button" id="ViewProjects" onclick="ViewProjects()" onpointerenter='PointerEnter("ViewProjects")' onpointerleave='PointerLeave("ViewProjects")'>View Projects</button>
