--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
     <div class="Main">
         <button class="Button" id="ToMainPage" onclick="ToMainPage()" onmouseenter='PointerEnter("ToMainPage")' onmouseleave='PointerLeave("ToMainPage")'>To main page</button>
         <br>
+        <abbr>--</abbr>
         <br>
         <h1>Here are my project(s) and game(s):</h1>
         <br>
