--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <div class="Main">
         <h1>About me</h1>
-        <p>Hello, my name is Firsty!</p>
+        <p>Hi, my name is Firsty,</p>
         <p>I am a frontend developer, programmer, and a chess player!</p>
         <p>Also, I have my profile links too! It's down here!</p>
+        <br>
+        <br>
+        <abbr>--Accounts</abbr>
         <br>
         <br>
         <button class="Button" id="ToGithub" onclick="ChangeToGithub()" onpointerenter='PointerEnter("ToGithub")' onpointerleave='PointerLeave("ToGithub")'>Github</button>
@@ -27,15 +30,25 @@
         <button class="Button" id="ToChess" onclick="ChangeToChess()" onpointerenter='PointerEnter("ToChess")' onpointerleave='PointerLeave("ToChess")'>Chess.com</button>
         <br>
         <br>
-        <abbr>--</abbr>
+        <p><span style="color: lightgray;">Discord Username: hi_firsty</span></p>
+        <br>
+        <br>
+        <p><span style="color: lightgray;">LINE:</span></p>
+        <img src="images/MYLINE_1.jpg" class="Image">
+        <br>
+        <br>
+        <abbr>--Projects</abbr>
         <br>
         <br>
         <button class="Button" id="ViewProjects" onclick="ViewProjects()" onpointerenter='PointerEnter("ViewProjects")' onpointerleave='PointerLeave("ViewProjects")'>View Projects</button>
         <br>
         <br>
-        <p><span style="color: blueviolet;">Discord Username Btw: hi_firsty</span></p>
+        <abbr>--Others</abbr>
+        <p>None</p>
+        <br>
+        <br>
     </div>
     <script src="scripts/mainscript.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/mainstyle.js"></script>
 </body>
 </html>
