--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,6 @@
         <!--<button class="Button" id="ToPleaseSpeedINeedThis" onpointerenter='PointerEnter("ToPleaseSpeedINeedThis")' onpointerleave='PointerLeave("ToPleaseSpeedINeedThis")'>PleaseSpeedINeedThis</button>-->
     </div>
     <script src="scripts/mainscript.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/mainstyle.js"></script>
 </body>
 </html>
