--- a/projects.html
+++ b/projects.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <div class="Main">
-        <button class="Button" id="ToMainPage" onclick="ToMainPage()" onmouseenter='PointerEnter("ToMainPage")' onmouseleave='PointerLeave("ToMainPage")'>To main page</button>
+        <button class="Button" id="ToMainPage" onclick="ToMainPage()">To main page</button>
+        <br>
         <br>
         <abbr>--</abbr>
+        <br>
         <br>
         <h1>Here are my project(s) and game(s):</h1>
         <br>
         <br>
-        <button class="Button" id="ToClickerGame" onclick="ToClickerGame()" onpointerenter='PointerEnter("ToClickerGame")' onpointerleave='PointerLeave("ToClickerGame")'>Clicker Game</button>
+        <button class="Button" id="ToClickerGame" onclick="ToClickerGame()">Clicker Game</button>
         <br>
         <br>
         <!--<button class="Button" id="ToPleaseSpeedINeedThis" onpointerenter='PointerEnter("ToPleaseSpeedINeedThis")' onpointerleave='PointerLeave("ToPleaseSpeedINeedThis")'>PleaseSpeedINeedThis</button>-->
