--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="styles/projectsstyle.css">
+    <link rel="stylesheet" href="styles/mainstyle.css">
+    <link rel="icon" type="image/png" href="images/GithubProfilePicture_1.png">
 </head>
 <body>
     <div class="Main">
