--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,13 @@
         <h1>Here are my project(s) and game(s):</h1>
         <br>
         <br>
-        <button class="Button" id="ToClickerGame" onclick="ToClickerGame()">Clicker Game</button>
+        <div class="Lists">
+            <ul>
+                <li><button class="Button" id="ToClickerGame" onclick="ToClickerGame()">Clicker Game</button></li>
+                <br>
+                <br>
+            </ul>
+        </div>
         <br>
         <br>
         <!--<button class="Button" id="ToPleaseSpeedINeedThis" onpointerenter='PointerEnter("ToPleaseSpeedINeedThis")' onpointerleave='PointerLeave("ToPleaseSpeedINeedThis")'>PleaseSpeedINeedThis</button>-->
