--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="Main">
-        <h1>About me</h1>
+        <u><h1>About me</h1></u>
         <div class="Details">
             <p>Hi, my name is <strong>Firsty</strong>,</p>
             <p>I am a frontend developer, programmer, and a chess player!</p>
