--- a/index.html
+++ b/index.html
@@ -99,8 +99,13 @@
         <br>
         <br>
         <button class="Button" id="ViewProjects" onclick="ViewProjects()">View Projects</button>
+        <br>
+        <br>
+        <h2>--Others</h2>
+        <br>
+        <br>
+        <button class="Button" id="ContactMe" onclick="ToGmail()">Contact Me</button>
     </div>
     <script src="scripts/mainscript.js"></script>
-    <script src="scripts/mainstyle.js"></script>
 </body>
 </html>
