--- a/projects.html
+++ b/projects.html
@@ -20,11 +20,10 @@
         <br>
         <br>
         <div class="Lists">
-            <ul>
-                <li><button class="Button" id="ToClickerGame" onclick="ToClickerGame()">Clicker Game</button></li>
-                <br>
-                <br>
-            </ul>
+            <button class="Button" id="ToClickerGame" onclick="ToClickerGame()">Clicker Game</button>
+            <br>
+            <br>
+            <button class="Button" id="ToMyFirstCalculator" onclick="ToMyFirstCalculator()">My First Calculator</button>
         </div>
         <br>
         <br>
