--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
         <abbr>--</abbr>
         <br>
         <br>
-        <h1>Here are my project(s) and game(s):</h1>
+        <h1>--Projects</h1>
         <br>
         <br>
         <div class="Lists">
