--- a/accounts.html
+++ b/accounts.html
@@ -34,7 +34,7 @@
         <abbr>--</abbr>
         <br>
         <br>
-        <button class="Button" id="ToYoutube">Youtube</button>
+        <button class="Button" id="ToYoutube" onclick="ChangeToYoutube()">Youtube</button>
         <br>
         <br>
         
@@ -50,7 +50,7 @@
         <abbr>--</abbr>
         <br>
         <br>
-        <button class="Button" id="ToTiktok">Tiktok</button>
+        <button class="Button" id="ToTiktok" onclick="ChangeToTiktok()">Tiktok</button>
         <br>
         <br>
         
