--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         <u><h1>About me</h1></u>
 
         <div class="Details">
-            <p>Hi, my name is <strong>Firsty</strong>,</p>
-            <p>I am a frontend developer, programmer, and a chess player!</p>
-            <P>I got the links down here too!</P>
+            <p>
+                Hi, my name is <strong>Firsty</strong>,<br>
+                I was borned in 1/1/2015,<br>
+                I am a frontend developer, programmer, student, and a chess player!<br>
+                I got the links down here too!
+            </p>
+
         </div>
         
         <br>
