--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,9 @@
             <br>
             <br>
             <button class="Button" id="ToMyFirstCalculator" onclick="ToMyFirstCalculator()">My First Calculator</button>
+            <br>
+            <br>
+            <button class="Button" id="ToScreenSaver" onclick="ToScreenSaver()">Screen Saver</button>
         </div>
         <br>
         <br>
